<resources>
    <string name="app_name">Healthy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="tag">Tag</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="log_out">Log out</string>
    <string name="contact">Contact</string>
    <string name="errSendData">Send message get error</string>
    //Setting
    <string name="personInfo">User Info</string>
    <string name="gender">Gender</string>
    <string name="heart">Bpm</string>
    <string name="height">Height(cm)</string>
    <string name="userName">User Name</string>
    <string name="weight">Weight(Kg)</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="tittleChooseImage">Choose image</string>
    <string name="Save">Save</string>
    <string name="errValue">Required field</string>
    <string name="snoozeAlert">Snooze after 10 minutes</string>
    <string name="delete">DELETE</string>
    <string name="errSetting">You\'re not login</string>
    <string name="hint_description">Type your note here!</string>
    <string name="new_point">Add new point</string>

    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="value">Value</string>
    <string name="deleteTracker">Are you sure you want to delete this tracker?</string>
    <string name="defaultDescription">No value found</string>
    <string name="title">Title</string>
    <string name="nameValue">Name value</string>
    <string name="last_update">Updated:</string>
    <string name="increase">Increase: </string>
    <string name="reduced">Reduced: </string>
    <string name="setDate">Set date</string>
    <string name="setTime">Set time</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="recently">Recently</string>
    <string name="delete_this">Are you sure you want to delete this?</string>
    <string name="phone">Phone number</string>
    <string name="call">Call</string>

    <string name="create_tracker">Create tracker</string>
    <string name="create_timer">Create reminder</string>
    <string name="errorDate">Date cannot be less than current date</string>
    <string name="chat">Chat</string>
    <string name="reminder">Reminder</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="status">Status</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="max_heart">Max heart rate: 200BPM</string>
    <string name="status0">Press Start and Place your finger over the camera sensor and LED</string>
    <string name="status1">Got a value. Calculating...</string>
    <string name="status2">Session clear. Large value!!</string>
    <string name="status3">Measured heart rate.</string>
    <string name="status4">Good job. Keep the device stationary.</string>
    <string name="status5">Keep the device stationary in your hands!</string>
    <string name="BMI0">Underweight</string>
    <string name="BMI1">Normal range</string>
    <string name="BMI2">Overweight</string>
    <string name="BMI3">Preobese</string>
    <string name="BMI4">Obese class I</string>
    <string name="BMI5">Obese class II</string>
    <string name="BMI6">Obese class III</string>
    <string name="null_message">Null message</string>
    <string name="send_clock"><u>Send timer reminder for you</u></string>
    <string name="received_timer">Detail reminder</string>
    <string name="errTimer">Overdue timer</string>
    <string name="noData">No data found</string>

    <string name="StatusHeartRate1">Slow heartbeat</string>
    <string name="StatusHeartRate2">Normal heartbeat</string>
    <string name="StatusHeartRate3">Fast heartbeat</string>
    //User
    <string name="errUser">Wrong user name</string>
    <string name="progressing">Progressing...</string>
    <string name="saved">Saved</string>
    <string name="errsaved">Save error</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="youSendNotifi">You have send a reminder.</string>
    <string name="add_fr">Add friend</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //Main
    <string name="offline">Offline mode</string>
    <string name="errConnection">No internet connection</string>
    <string name="tracker">Tracker</string>
    //Login
    <string name="errrequired">Required field</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="No_account"><u>No account yet? Create one</u></string>
    <string name="Remember">Remember account</string>
    <string name="Register">Register</string>
    <string name="Create">Create</string>
    <string name="errEmail">Please input valid email</string>
    <string name="errEmail2">Email already in use</string>
    <string name="errPassword">Please enter password</string>
    <string name="errPassword2">Password must be 6-12 characters</string>
    <string name="errName">Please input correct name</string>
    <string name="createAccount">Progressing...</string>
    <string name="authenticating">Authenticating...</string>
    <string name="delsucess">Delete complete</string>
    <string name="delerror">Delete fail</string>
    <string name="password2">Type password again</string>
    <string name="err_password">password does not match</string>

    <string name="total">Total</string>
    <string name="timer">Timer</string>
    <string name="maxHeart">Max heart rate</string>
    <string name="water">Water needed</string>
    <string name="fat">Body fat percentage</string>
    <string name="caculate">Calculate</string>
    <string name="Back">Back</string>
    <string name="your_max_heart">Your max heart rate: </string>
    <string name="non_calculate">Non calculate</string>
    <string name="age">Age</string>
    <string name="errage">It\'s not a valid age</string>
    <string name="litre">litre</string>
    <string name="errvalue">Error value</string>
    <string name="your_water">water you need per day: </string>
    <string name="your_bmi">Bmi: </string>
    <string name="you">You have: </string>
    <string name="beat_perminutes">beat per minutes</string>
    <string name="percent">percent</string>
    <string name="contact_me">Name: Nguyen Huynh dev \t\n Phone number: 0907380095 \t\n Email: huynhthanhnguyenit@gmail.com</string>

</resources>
