<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_tracker"
            android:icon="@drawable/ic_tracker"
            android:title="@string/tracker" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_heart"
            android:icon="@drawable/ic_hear1"
            android:title="@string/heart" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_call"
                android:title="@string/contact"/>
        </menu>
    </item>

</menu>
