<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/size10"
    android:background="@color/transparent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_tracker">


        <TextView
            android:layout_marginStart="@dimen/size5"
            android:layout_marginTop="@dimen/size10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_size20"
            android:textColor="@color/color_blue"
            android:text="@string/maxHeart"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_title"
            android:layout_marginTop="@dimen/size20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColorWhite"
            android:padding="5dp">

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/ic_title"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:text=""
                android:textSize="@dimen/text_size15" />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size5"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gender" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="7.43"
                android:orientation="horizontal"
                android:paddingStart="@dimen/size40">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size50"
                    android:text="@string/female" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/textColorWhite"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <View style="@style/divider" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Back"
                android:textSize="@dimen/text_size16" />

            <!-- The vertical divider line between the two buttons -->

            <View
                android:id="@+id/buttonVerticalDivider"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/textColorGray" />

            <Button
                android:id="@+id/btnOk"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/caculate"
                android:textSize="@dimen/text_size16" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>